--- a/files/simpleGridTemplate.css
+++ b/files/simpleGridTemplate.css
@@ -16,7 +16,7 @@ body {
 header {
 	width: 100%;
 	height: 8%;
-	background-color: #5D5E5D;
+	background-color: #FF5E50;
 	border-bottom: 1px solid #353635;
 }
 .logo {
@@ -26,7 +26,7 @@ header {
 	letter-spacing: 4px;
 	margin-right: auto;
 	text-align: center;
-	padding-top: 15px;
+	padding-top: 5px;
 	line-height: 2em;
 	font-size: 22px;
 }
