--- a/files/simpleGridTemplate.css
+++ b/files/simpleGridTemplate.css
@@ -15,20 +15,20 @@ body {
 /* Header */
 header {
 	width: 100%;
-	height: 8%;
-	background-color: #FF5E50;
+	height: 3%;
+	background-color: #225E5D;
 	border-bottom: 1px solid #353635;
 }
 .logo {
-	color: #fff;
+	color: #FFFF50;
 	font-weight: bold;
 	margin-left: auto;
 	letter-spacing: 4px;
 	margin-right: auto;
 	text-align: center;
-	padding-top: 5px;
+	padding-top: 15px;
 	line-height: 2em;
-	font-size: 22px;
+	font-size: 10px;
 }
 .hero_header {
 	color: #FFFFFF;
@@ -88,13 +88,13 @@ header {
 }
 /* More info */
 .intro {
-	background-color: #FFFFFF;
-	padding-bottom: 35px;
+	background-color: #001010	;
+	padding-bottom: 25px;
 }
 .column {
 	width: 50%;
 	text-align: center;
-	padding-top: 30px;
+	padding-top: 10px;
 	float: left;
 }
 .intro .column h3 {
@@ -102,7 +102,7 @@ header {
 	text-align: center;
 }
 .intro .column p {
-	color: #FFFFFF;
+	color: #000;
 }
 .cards {
 	width: 100%;
@@ -120,7 +120,7 @@ header {
 	margin-left: 20px;
 	margin-right: 20px;
 	width: 80%;
-	margin-top: 4%;
+	margin-top: 3%;
 }
 .button {
 	width: 200px;
@@ -165,7 +165,7 @@ footer {
 }
 .intro {
 	display: inline-block;
-	background-color: #6DC7D0;
+	background-color: #82EDE2;
 }
 .profile {
 	width: 50%;
