--- a/files/simpleGridTemplate.css
+++ b/files/simpleGridTemplate.css
@@ -89,12 +89,12 @@ header {
 /* More info */
 .intro {
 	background-color: #001010	;
-	padding-bottom: 25px;
+	padding-bottom: 15px;
 }
 .column {
 	width: 50%;
 	text-align: center;
-	padding-top: 10px;
+	padding-top: 20px;
 	float: left;
 }
 .intro .column h3 {
@@ -112,15 +112,15 @@ header {
 	opacity: 0.8;
 }
 .intro .column p {
-	padding-left: 30px;
-	padding-right: 30px;
+	padding-left: 20px;
+	padding-right: 10px;
 	text-align: justify;
-	line-height: 25px;
+	line-height: 20px;
 	font-weight: lighter;
-	margin-left: 20px;
+	margin-left: 10px;
 	margin-right: 20px;
 	width: 80%;
-	margin-top: 3%;
+	margin-top: 4px;
 }
 .button {
 	width: 200px;
