--- a/files/simpleGridTemplate.css
+++ b/files/simpleGridTemplate.css
@@ -8,8 +8,8 @@ body {
 /* Container */
 .container {
 	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 10px;
+	margin-right: 10px;
 	background-color: #FFFFFF;
 }
 /* Header */
