--- a/files/simpleGridTemplate.css
+++ b/files/simpleGridTemplate.css
@@ -16,7 +16,7 @@ body {
 header {
 	width: 100%;
 	height: 3%;
-	background-color: #225E5D;
+	background-color: #02296a;
 	border-bottom: 1px solid #353635;
 }
 .logo {
@@ -88,7 +88,7 @@ header {
 }
 /* More info */
 .intro {
-	background-color: #001010	;
+	background-color: #00b0f0;
 	padding-bottom: 10px;
 }
 .column {
