--- a/files/simpleGridTemplate.css
+++ b/files/simpleGridTemplate.css
@@ -7,7 +7,7 @@ body {
 }
 /* Container */
 .container {
-	width: 100%;
+	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: #FFFFFF;
@@ -15,44 +15,57 @@ body {
 /* Header */
 header {
 	width: 100%;
-	height: 3%;
-	background-color: #02296a;
+	height: 8%;
+	background-color: #1f296a;
 	border-bottom: 1px solid #353635;
 }
 .logo {
-	color: #FFFF50;
+	color: #fff;
 	font-weight: bold;
 	margin-left: auto;
 	letter-spacing: 4px;
 	margin-right: auto;
 	text-align: center;
 	padding-top: 15px;
-	line-height: 2em;
-	font-size: 10px;
+	line-height: 18px;
+	font-size: 20px;
 }
+
 /* More info */
 .intro {
-	background-color: #00b0f0;
-	padding-bottom: 10px;
+	background-color: #FFFFFF;
+	padding-bottom: 25px;
 }
 .column {
-	width: 60%;
+	width: 50%;
 	text-align: center;
-	padding-top: 30px;
+	padding-top: 20px;
 	float: left;
 }
+.intro .column h3 {
+	color: #FFFFFF;
+	text-align: center;
+}
 .intro .column p {
-	padding-top: -20px;
-	color: #000;	
+	color: #f2f2f2;
+}
+.cards {
+	width: 100%;
+	height: auto;
+	max-width: 400px;
+	max-height: 200px;
+	opacity: 0.8;
+}
+.intro .column p {	
 	padding-left: 20px;
-	padding-right: 1px;
+	padding-right: 10px;
 	text-align: justify;
-	line-height: 20px;
+	line-height: 23px;
 	font-weight: lighter;
-	margin-left: 10px;
-	margin-right: 10px;
-	width: 80%;
-	margin-top: 4px;
+	margin-left: 0px;
+	margin-right: 0px;
+	width: 94%;
+	margin-top: 10px;
 }
 .copyright {
 	text-align: center;
@@ -70,6 +83,118 @@ footer {
 	padding-top: 60px;
 	padding-bottom: 60PX;
 }
+.intro {
+	display: inline-block;
+	background-color: #00b0f0;
+}
 .profile {
 	width: 50%;
+}
+.gallery .thumbnail .tag {
+	color: #5D5E5D;
+	padding-bottom: 4px;
+	padding-top: 4px;
+	text-align: left;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+/* Mobile */
+@media (max-width: 320px) {
+.logo {
+	width: 100%;
+	text-align: center;
+	margin-top: 13px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+	margin-left: 0px;
+}
+.text_column {
+	width: 100%;
+	text-align: justify;
+	padding: 0;
+}
+.intro .column p {
+	width: 80%;
+	margin-left: 0px;
+}
+.text_column {
+	padding-left: 20px;
+}
+.thumbnail {
+	width: 100%;
+}
+.column {
+	width: 100%;
+	margin-top: 0px;
+}
+.hero_header {
+	padding-left: 10px;
+	padding-right: 10px;
+	line-height: 22px;
+	text-align: center;
+}
+}
+
+/* Small Tablets */
+@media (min-width: 321px)and (max-width: 767px) {
+.logo {
+	width: 100%;
+	text-align: center;
+	margin-top: 13px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+	margin-left: 0px;
+}
+.text_column {
+	width: 100%;
+	text-align: left;
+	padding: 0;
+}
+.thumbnail {
+	width: 100%;
+}
+.column {
+	width: 100%;
+	margin-top: 0px;
+}
+.thumbnail {
+	width: 100%;
+}
+.text_column {
+	padding-left: 20px;
+	padding-right: 20px;
+	width: 90%;
+}
+.column {
+	width: 100%;
+	margin-left: 0px;
+	margin-right: 0px;
+}
+.profile {
+	width: 100%;
+}
+.intro .column p {
+	width: 90%;
+	text-align: center;
+	padding-left: 0px;
+}
+}
+
+/* Small Desktops */
+@media (min-width: 768px) and (max-width: 1096px) {
+.text_column {
+	width: 100%;
+}
+.thumbnail {
+	width: 48%;
+}
+.text_column {
+	width: 90%;
+	margin: 0;
+	padding: 20px;
+}
+.intro .column p {
+	width: 80%;
+}
 }
